--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.7",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "angular-jk-rating-stars": "^1.0.8",
+    "angular-rating-icons": "^1.0.3",
+    "angular-star-rating": "^3.0.8",
     "angular2-token": "^0.2.0-beta.14",
     "core-js": "^2.4.1",
+    "jquery-bar-rating": "^1.2.2",
+    "ngx-bar-rating": "^1.1.0",
+    "ngx-rating": "0.0.9",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
